# Portfolio

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ADMIN_SETUP.md  BLOG_TUTORIAL.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  app.py  app_simple.py  env_template.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  deploy.yml  static.yml
docs/: _config.yml  index.html
docs/blog/: README.md  blog-management.js  management.html
docs/static/css/: admin.css  blog-enhanced.css  enhanced-features.css  enhanced.css  fixes.css  quick-fixes.css  responsive.css  spacing-fixes.css  style.css  theme-dark.css  timeline-fixes.css  timeline-override.css
docs/static/js/: admin-dashboard.js  background-enhancer.js  enhanced-features.js  main.js  placeholder-generator.js  theme.js  timeline-enhanced.js
static/css/: enhanced-features.css  spacing-fixes.css  style.css  timeline-fixes.css  timeline-override.css
static/js/: chatbot.js  main.js  particles-config.js  placeholders.js
templates/: admin_dashboard.html  admin_login.html  index.html  layout.html
